# stock-radar

./: .gitignore  main.py  portfolio.json  pyproject.toml  requirements.txt  schedule_agent.py  view.bat
configs/: config.yaml
sr_analysis/: alerts.py  anomaly.py  indicators.py
sr_data/: cache.py  db.py  fetcher.py
sr_display/: __init__.py  chart_view.py  portfolio_view.py  watchlist_view.py
sr_scheduler/: scanner.py
sr_simulation/: backtester.py  paper_trader.py  portfolio.py  strategy.py
